sandbox/in_arbeit/magick_6.9.12.98/sandbox/include-C/magick/magick/in_arbeiit/fertig/quantize.h

/*
  Copyright 1999 ImageMagick Studio LLC, a non-profit organization
  dedicated to making software imaging solutions freely available.
  
  You may not use this file except in compliance with the License.  You may
  obtain a copy of the License at
  
    https://imagemagick.org/script/license.php
  
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.

  MagickCore image quantization methods.
*/
#ifndef MAGICKCORE_QUANTIZE_H
#define MAGICKCORE_QUANTIZE_H

#include "magick/colorspace.h"

typedef enum
{
  UndefinedDitherMethod,
  NoDitherMethod,
  RiemersmaDitherMethod,
  FloydSteinbergDitherMethod
} DitherMethod;

typedef struct _QuantizeInfo
{
  size_t
    number_colors;

  size_t
    tree_depth;

  MagickBooleanType
    dither;

  ColorspaceType
    colorspace;

  MagickBooleanType
    measure_error;

  size_t
    signature;

  DitherMethod
    dither_method;
} QuantizeInfo;

extern  MagickBooleanType
  CompressImageColormap(Image *);
extern  MagickBooleanType
  GetImageQuantizeError(Image *);
extern  MagickBooleanType
  PosterizeImage(Image *,const size_t,const MagickBooleanType);
extern  MagickBooleanType
  PosterizeImageChannel(Image *,const ChannelType,const size_t,
    const MagickBooleanType);
extern  MagickBooleanType
  QuantizeImage(const QuantizeInfo *,Image *);
extern  MagickBooleanType
  QuantizeImages(const QuantizeInfo *,Image *);
extern  MagickBooleanType
  RemapImage(const QuantizeInfo *,Image *,const Image *);
extern  MagickBooleanType
  RemapImages(const QuantizeInfo *,Image *,const Image *);

extern  QuantizeInfo
  *AcquireQuantizeInfo(const ImageInfo *);
extern  QuantizeInfo
  *CloneQuantizeInfo(const QuantizeInfo *);
extern  QuantizeInfo
  *DestroyQuantizeInfo(QuantizeInfo *);

extern  void
  GetQuantizeInfo(QuantizeInfo *);